--- a/welcome.htm
+++ b/welcome.htm
@@ -1,6 +1,97 @@
-<html>
-  <head><title>Adam Kramez - ePortfolio</title></head>
-  <body>
-    <h1>Welcome to my Capstone Portfolio!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Adam Kramez | Computer Science ePortfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 100px auto;
+      padding: 2rem;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
+      color: #2c3e50;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+
+    /* Main CTA button */
+    .main-button {
+      display: inline-block;
+      padding: 1rem 2rem;
+      background-color: #2c3e50;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 1.1rem;
+      font-weight: bold;
+      margin-bottom: 2rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .main-button:hover {
+      background-color: #1a252f;
+    }
+
+    /* Smaller buttons underneath */
+    .button-group {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.8rem;
+    }
+
+    .button-group a {
+      display: inline-block;
+      padding: 0.6rem 1.2rem;
+      background-color: #2c3e50;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 500;
+      font-size: 0.95rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .button-group a:hover {
+      background-color: #1a252f;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Adam Kramez</h1>
+    <p>Welcome to my Computer Science ePortfolio</p>
+
+    <!-- Main larger button -->
+    <a href="self-assessment.html" class="main-button">📄 Professional Self-Assessment</a>
+
+    <!-- Smaller horizontal button group -->
+    <div class="button-group">
+      <a href="Documents/Artifact Code Review.pdf" download>Artifact Code Review</a>
+      <a href="Documents/Enhancement 1 - Software Design.pdf" download>Enhancement 1: Software Design</a>
+      <a href="Documents/Enhancement 2 - Databases.pdf" download>Enhancement 2: Databases</a>
+      <a href="Documents/Enhancement 3 - Algorithms.pdf" download>Enhancement 3: Algorithms</a>
+    </div>
+  </div>
+</body>
 </html>
