Fix index file rename and refresh current files

--- a/index.htm
+++ b/index.htm
@@ -83,14 +83,14 @@
     <p>Welcome to my Computer Science ePortfolio</p>
 
     <!-- Main larger button -->
-    <a href="self-assessment.html" class="main-button">📄 Professional Self-Assessment</a>
+    <a href="PersonalSelfAssesment.html" class="main-button">📄 Professional Self-Assessment</a>
 
     <!-- Smaller horizontal button group -->
     <div class="button-group">
       <a href="Documents/Artifact Code Review.pdf" download>Artifact Code Review</a>
-      <a href="Documents/Enhancement 1 - Software Design.pdf" download>Enhancement 1: Software Design</a>
-      <a href="Documents/Enhancement 2 - Databases.pdf" download>Enhancement 2: Databases</a>
-      <a href="Documents/Enhancement 3 - Algorithms.pdf" download>Enhancement 3: Algorithms</a>
+      <a href="ArtifactOne_SoftwareDesignn.html">Enhancement 1: Software Design</a>
+      <a href="ArtifactTwo_Databases.html">Enhancement 2: Databases</a>
+      <a href="ArtifactThree_DSA.html">Enhancement 3: Algorithms</a>
     </div>
   </div>
 </body>
