--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Smaller horizontal button group -->
     <div class="button-group">
-	<a href="CodeReview.html">Enhancement 1: Software Design</a>
+	<a href="CodeReview.html">Code Review</a>
 
      <a href="ArtifactOne_SoftwareDesignn.html">Enhancement 1: Software Design</a>
       <a href="ArtifactTwo_Databases.html">Enhancement 2: Databases</a>
